--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'DINosaur';
+  src: url('./static/fonts/DINosaur-Light.otf') format('truetype');
+  font-weight: 100;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'DINosaur';
+  src: url('./static/fonts/DINosaur-Book.otf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'HarmonyOS';
+  src: url('./static/fonts/HarmonyOS_Sans_SC_Light.ttf') format('truetype');
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: 'HarmonyOS';
+  src: url('./static/fonts/HarmonyOS_Sans_SC_Regular.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'HarmonyOS';
+  src: url('./static/fonts/HarmonyOS_Sans_SC_Medium.ttf') format('truetype');
+  font-weight: 700;
 }
