--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,7 @@
   src: url('./static/fonts/HarmonyOS_Sans_SC_Medium.ttf') format('truetype');
   font-weight: 700;
 }
+
+span.highlight{
+  background-color: beige;
+}
